test/corpus/expressions.txt
=========
Calls
=========

a()
b(1)
c(d)
d(e, f)

---------

(source_file
  (call_expression
    function: (identifier)
    arguments: (argument_list))
  (call_expression
    function: (identifier)
    arguments: (argument_list
      (integer)))
  (call_expression
    function: (identifier)
    arguments: (argument_list
      (identifier)))
  (call_expression
    function: (identifier)
    arguments: (argument_list
      (identifier)
      (identifier))))

=========
Binary
=========

1.0+1.0
1.0-1.0
1.0*1.0
1.0/1.0

---------

(source_file
  (binary_expression
    left: (float)
    right: (float))
  (binary_expression
    left: (float)
    right: (float))
  (binary_expression
    left: (float)
    right: (float))
  (binary_expression
    left: (float)
    right: (float)))

=========
Comparison
=========

1 < 2 <= 3 == 3 >= 2 > 1

---------

(source_file
  (comparison_operator
    (integer)
    (integer)
    (integer)
    (integer)
    (integer)
    (integer)))

=========
Assignments
=========

a = 1
b = c;
[a,b] = c;

---------

(source_file
  (assignment
    left: (identifier)
    right: (integer))
  (assignment
    left: (identifier)
    right: (identifier))
  (assignment
    left: (matrix_pattern
      (identifier)
      (identifier))
    right: (identifier)))

=========
Augmented assignments
=========

a += 1
b++
--c

---------

(source_file
  (augmented_assignment
    left: (identifier)
    right: (integer))
  (update_expression
    argument: (identifier))
  (update_expression
    argument: (identifier)))

=========
Member expression
=========

a.b.c = 1

---------

(source_file
  (assignment
    left: (member_expression
      element: (member_expression
        element: (identifier)
        field: (identifier))
      field: (identifier))
    right: (integer)))

=========
Matrix expression
=========

[1 3 3; 4 5 6]

---------

(source_file
  (matrix
    (integer)
    (integer)
    (integer)
    (integer)
    (integer)
    (integer)))

=========
Cell expression
=========

{ 'a'; 1,2,3 }

---------

(source_file
  (cell
    (char)
    (integer)
    (integer)
    (integer)))
