test/corpus/literals.txt
=========
Integers
=========

1
-1

------

(source_file
  (integer)
  (unary_expression
    (operator)
    (integer)))

=========
Floats
=========

1.0
-1.0
2.01e+10
2.01e-10

---------

(source_file
  (float)
  (unary_expression
    (operator)
    (float))
  (float)
  (float))

=========
Char arrays
=========

'hello'
'hello ''world''!'

---------

(source_file
  (char)
  (char
    (escape_sequence)
    (escape_sequence)))

=========
String arrays
=========

"hello"
"hello""world""!"
"\n \777 \xFF"

---------

(source_file
  (string)
  (string
    (escape_sequence)
    (escape_sequence))
  (string
    (escape_sequence)
    (escape_sequence)
    (escape_sequence)))

=========
Booleans
=========

true
false

---------

(source_file
  (true)
  (false))
